Change supported Java version to 8